--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,16 +10,13 @@ repos:
       - id: end-of-file-fixer
       - id: check-yaml
       - id: check-added-large-files
-      - id: pretty-format-json
-        args:
-          - --autofix
   - repo: git://github.com/Lucas-C/pre-commit-hooks
     rev: v1.1.7
     hooks:
       - id: forbid-tabs
         exclude_types: [python, javascript, dtd, markdown, makefile]
         exclude: binary|\.bin$
-  - repo: git://github.com/kintoandar/pre-commit.git
+  - repo: git://github.com/kintoandar/pre-commit
     rev: v2.1.0
     hooks:
       - id: terraform_fmt
@@ -29,7 +26,6 @@ repos:
       - commit
       - push
     hooks:
-      - id: detect-aws-credentials
       - id: detect-private-key
   - repo: git://github.com/detailyang/pre-commit-shell
     rev: 1.0.5
