--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,7 @@
 ---
 # yamllint disable rule:line-length
+default_language_version:
+  python: python3
 repos:
   - repo: git://github.com/pre-commit/pre-commit-hooks
     rev: v3.2.0
@@ -10,29 +12,29 @@ repos:
       - id: end-of-file-fixer
       - id: check-yaml
       - id: check-added-large-files
+      - id: pretty-format-json
+        args:
+          - --autofix
+
+      - id: detect-private-key
   - repo: git://github.com/Lucas-C/pre-commit-hooks
     rev: v1.1.9
     hooks:
       - id: forbid-tabs
-        exclude_types: [python, javascript, dtd, markdown, makefile]
+        exclude_types:
+          - python
+          - javascript
+          - dtd
+          - markdown
+          - makefile
+          - xml
         exclude: binary|\.bin$
-  - repo: git://github.com/kintoandar/pre-commit
-    rev: v2.1.0
-    hooks:
-      - id: terraform_fmt
-  - repo: git://github.com/pre-commit/pre-commit-hooks
-    rev: v3.2.0
-    stages:
-      - commit
-      - push
-    hooks:
-      - id: detect-private-key
-  - repo: git://github.com/detailyang/pre-commit-shell
-    rev: 1.0.5
+  - repo: git://github.com/jameswoolfenden/pre-commit-shell
+    rev: 0.0.2
     hooks:
       - id: shell-lint
   - repo: git://github.com/igorshubovych/markdownlint-cli
-    rev: v0.23.2
+    rev: v0.24.0
     hooks:
       - id: markdownlint
   - repo: git://github.com/adrienverge/yamllint
@@ -44,11 +46,11 @@ repos:
         entry: yamllint
         language: python
         types: [file, yaml]
-  - repo: git://github.com/antonbabenko/pre-commit-terraform
-    rev: v1.43.0
+  - repo: git://github.com/jameswoolfenden/pre-commit
+    rev: v0.1.33
     hooks:
-      - id: terraform_docs
-  - repo: git://github.com/prettier/prettier
-    rev: 2.1.2
-    hooks:
-      - id: prettier
+      - id: terraform-fmt
+      - id: checkov-scan
+        language_version: python3.8
+      - id: tf2docs
+        language_version: python3.8
