Update to standard

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,7 +15,6 @@ repos:
       - id: pretty-format-json
         args:
           - --autofix
-
       - id: detect-private-key
   - repo: git://github.com/Lucas-C/pre-commit-hooks
     rev: v1.1.9
@@ -50,6 +49,7 @@ repos:
     rev: v0.1.33
     hooks:
       - id: terraform-fmt
+        language_version: python3.8
       - id: checkov-scan
         language_version: python3.8
       - id: tf2docs
