--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -1,9 +1,13 @@
 ---
 # yamllint disable rule:line-length
-name: pull_request
-on: pull_request
+name: Pull Request
+on:
+  pull_request:
+  workflow_dispatch:
+
 env:
   terraform: 0.14.5
+  terraform-docs: 0.11.2
   tf_target_dir: example/examplea
 
 jobs:
@@ -33,12 +37,9 @@ jobs:
         uses: actions/checkout@v2
         with:
           token: ${{ github.token }}
-      - uses: actions/setup-python@v2
+      - name: Checkov action
+        uses: bridgecrewio/checkov-action@master
         with:
-          python-version: 3.8
-      - run: |
-          mkdir $GITHUB_WORKSPACE/bin
-          curl -Lo $GITHUB_WORKSPACE/bin/terraform-docs https://github.com/terraform-docs/terraform-docs/releases/download/v0.10.1/terraform-docs-v0.10.1-$(uname)-amd64
-          chmod +x $GITHUB_WORKSPACE/bin/terraform-docs
-          echo "$GITHUB_WORKSPACE/bin" >> $GITHUB_PATH
-      - uses: pre-commit/action@v2.0.0
+          directory: "example/examplea"
+          framework: terraform
+          args: "--output cli  --bc-api-key ${{ secrets.BC_API_KEY }}"
